try token generator

--- a/Car_Parking_system/src/car_parking_system/FXMLDocument.fxml
+++ b/Car_Parking_system/src/car_parking_system/FXMLDocument.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="333.0" prefWidth="461.0" style="-fx-background-color: #FD1D1D;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="car_parking_system.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="333.0" prefWidth="461.0" style="-fx-background-color: #00D4FF;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="car_parking_system.FXMLDocumentController">
     <children>
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
       <Label layoutX="77.0" layoutY="169.0" text="Admin :">
@@ -28,8 +28,14 @@
       </Label>
       <TextField fx:id="adminField" layoutX="160.0" layoutY="169.0" promptText="Enter Admin Name" />
       <PasswordField fx:id="passwordField" layoutX="160.0" layoutY="220.0" promptText="Enter Password" />
-      <Button fx:id="login" layoutX="103.0" layoutY="281.0" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
-      <Button fx:id="newCarParking" layoutX="196.0" layoutY="281.0" mnemonicParsing="false" onAction="#handleNewCarParking" text="New Car Parking" />
-      <FontAwesomeIcon glyphName="CAR" layoutX="196.0" layoutY="73.0" size="5em" />
+      <Button fx:id="login" layoutX="149.0" layoutY="281.0" mnemonicParsing="false" onAction="#handleLogin" style="-fx-background-color: #E5EEAE;" text="Login" textFill="RED">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Button>
+      <Button fx:id="newCarParking" layoutX="253.0" layoutY="281.0" mnemonicParsing="false" onAction="#handleNewCarParking" text="New Car Parking" textFill="RED">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Button>
+      <FontAwesomeIcon glyphName="CAR" layoutX="194.0" layoutY="73.0" size="5em" />
     </children>
 </AnchorPane>
