--- a/Car_Parking_system/src/car_parking_system/New_Car_Parking.fxml
+++ b/Car_Parking_system/src/car_parking_system/New_Car_Parking.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -9,77 +8,74 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="517.0" prefWidth="441.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="car_parking_system.New_Car_ParkingController">
-    <stylesheets>
-        <URL value="@new_car_parking.css" />
-    </stylesheets>
+<AnchorPane id="AnchorPane" prefHeight="566.0" prefWidth="513.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="car_parking_system.New_Car_ParkingController">
    <children>
-      <Label layoutX="33.0" layoutY="81.0" text="Car Number:" textFill="#220000">
+      <Label layoutX="53.0" layoutY="101.0" text="Car Number:" textFill="#220000">
          <font>
             <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="33.0" layoutY="128.0" text="Full Name:" textFill="#1e0000">
+      <Label layoutX="53.0" layoutY="148.0" text="Full Name:" textFill="#1e0000">
          <font>
             <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="33.0" layoutY="169.0" text="Gender:" textFill="#140000">
+      <Label layoutX="53.0" layoutY="189.0" text="Gender:" textFill="#140000">
          <font>
             <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="33.0" layoutY="216.0" text="Position:" textFill="#110202">
+      <Label layoutX="53.0" layoutY="236.0" text="Position:" textFill="#110202">
          <font>
             <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="31.0" layoutY="260.0" text="Brand:" textFill="#0a0000">
+      <Label layoutX="51.0" layoutY="280.0" text="Brand:" textFill="#0a0000">
          <font>
             <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="375.0" text="Track No:" textFill="#070000">
+      <Label layoutX="45.0" layoutY="395.0" text="Track No:" textFill="#070000">
          <font>
             <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="141.0" layoutY="25.0" text="New Car Parking" textFill="#dd1818" underline="true">
+      <Label layoutX="161.0" layoutY="45.0" text="New Car Parking" textFill="#dd1818" underline="true">
          <font>
             <Font name="System Bold Italic" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="29.0" layoutY="321.0" text="Lap No:" textFill="#070000">
+      <Label layoutX="49.0" layoutY="341.0" text="Lap No:" textFill="#070000">
          <font>
             <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="23.0" layoutY="417.0" text="Mobile No:" textFill="#030000">
+      <Label layoutX="43.0" layoutY="437.0" text="Mobile No:" textFill="#030000">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <TextField layoutX="129.0" layoutY="79.0" promptText="Enter Car No" />
-      <TextField layoutX="129.0" layoutY="126.0" promptText="Enter Full_Name" />
-      <RadioButton layoutX="102.0" layoutY="171.0" mnemonicParsing="false" text="Male" />
-      <RadioButton layoutX="178.0" layoutY="171.0" mnemonicParsing="false" text="Female" />
-      <RadioButton layoutX="276.0" layoutY="170.0" mnemonicParsing="false" text="Others" />
-      <TextField layoutX="129.0" layoutY="214.0" promptText="Enter Position" />
-      <ComboBox layoutX="133.0" layoutY="258.0" prefWidth="150.0" promptText="Select Brand" />
-      <TextField layoutX="129.0" layoutY="316.0" promptText="Lap No" />
-      <TextField layoutX="129.0" layoutY="369.0" promptText="Track No" />
-      <TextField layoutX="130.0" layoutY="415.0" promptText="Enter Mobile No" />
-      <Button layoutX="200.0" layoutY="465.0" mnemonicParsing="false" text="OK">
+      <TextField fx:id="cno1" layoutX="148.0" layoutY="99.0" promptText="Enter Car No" />
+      <TextField fx:id="fulln1" layoutX="148.0" layoutY="146.0" promptText="Enter Full_Name" />
+      <RadioButton fx:id="m11" layoutX="122.0" layoutY="191.0" mnemonicParsing="false" text="Male" />
+      <RadioButton fx:id="f11" layoutX="198.0" layoutY="191.0" mnemonicParsing="false" text="Female" />
+      <RadioButton fx:id="o11" layoutX="296.0" layoutY="190.0" mnemonicParsing="false" text="Others" />
+      <TextField fx:id="p11" layoutX="149.0" layoutY="234.0" promptText="Enter Position" />
+      <ComboBox fx:id="b11" layoutX="153.0" layoutY="278.0" prefWidth="150.0" promptText="Select Brand" />
+      <TextField fx:id="l11" layoutX="149.0" layoutY="336.0" promptText="Lap No" />
+      <TextField fx:id="t11" layoutX="149.0" layoutY="389.0" promptText="Track No" />
+      <TextField fx:id="m11" layoutX="150.0" layoutY="435.0" promptText="Enter Mobile No" />
+      <Button fx:id="ok1" layoutX="221.0" layoutY="485.0" mnemonicParsing="false" text="OK">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Button fx:id="Rel_Parking" layoutX="262.0" layoutY="463.0" mnemonicParsing="false" onAction="#RelesedActionMethod" text="Released Parking">
+      <Button fx:id="Rel_Parking1" layoutX="282.0" layoutY="483.0" mnemonicParsing="false" onAction="#RelesedActionMethod" text="Released Parking">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <Button fx:id="tg1" layoutX="50.0" layoutY="467.0" mnemonicParsing="false" onAction="#GenaratingActionButton" text="Token Generator">
+      <Button fx:id="tg11" layoutX="70.0" layoutY="487.0" mnemonicParsing="false" onAction="#GenaratingActionButton" text="Token Generator">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
