--- a/Car_Parking_system/src/car_parking_system/Dasboard.fxml
+++ b/Car_Parking_system/src/car_parking_system/Dasboard.fxml
@@ -1,11 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="car_parking_system.DasboardController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="493.0" prefWidth="692.0" style="-fx-background-color: #57C785;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="car_parking_system.DasboardController">
+   <children>
+      <Label layoutX="183.0" layoutY="29.0" prefHeight="49.0" prefWidth="371.0" text="CAR PARKING SYSTEM" underline="true">
+         <font>
+            <Font name="System Bold" size="33.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="461.0" fitWidth="715.0" layoutY="104.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@picture/img_1.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="127.0" layoutY="133.0" text="Registration Form" textFill="#030303" underline="true">
+         <font>
+            <Font name="System Bold Italic" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="64.0" layoutY="230.0" text="Owner Name:" textFill="#eb0000">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="64.0" layoutY="269.0" text="Car Name:" textFill="#ff0b0b">
+         <font>
+            <Font name="System Bold Italic" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="64.0" layoutY="312.0" text="Car Number:" textFill="#e82222">
+         <font>
+            <Font name="System Bold Italic" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="65.0" layoutY="357.0" text="Entry Date:" textFill="#d30000">
+         <font>
+            <Font name="System Bold Italic" size="19.0" />
+         </font>
+      </Label>
+      <Label layoutX="64.0" layoutY="403.0" text="Exit Date:" textFill="#ff0808">
+         <font>
+            <Font name="System Bold Italic" size="21.0" />
+         </font>
+      </Label>
+      <TextField fx:id="on1" layoutX="192.0" layoutY="231.0" prefHeight="25.0" prefWidth="227.0" promptText="Owner Name" />
+      <TextField fx:id="cn1" layoutX="195.0" layoutY="272.0" prefHeight="25.0" prefWidth="218.0" promptText="Car Name" />
+      <TextField fx:id="cn11" layoutX="195.0" layoutY="315.0" prefHeight="25.0" prefWidth="218.0" promptText="Car Number" />
+      <DatePicker fx:id="ed1" layoutX="194.0" layoutY="359.0" prefHeight="25.0" prefWidth="227.0" promptText="Entry Date" />
+      <DatePicker fx:id="ed11" layoutX="190.0" layoutY="406.0" prefHeight="25.0" prefWidth="234.0" promptText="Exit Date" />
+      <Button fx:id="sub1" layoutX="274.0" layoutY="449.0" mnemonicParsing="false" onAction="#SubmitActionButton" style="-fx-background-color: #57C785;" text="Submit">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
