--- a/Car_Parking_system/src/car_parking_system/FXMLDocument.fxml
+++ b/Car_Parking_system/src/car_parking_system/FXMLDocument.fxml
@@ -8,33 +8,29 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="333.0" prefWidth="461.0" style="-fx-background-color: #00D4FF;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="car_parking_system.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="333.0" prefWidth="461.0" style="-fx-background-color: #011F5B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="car_parking_system.FXMLDocumentController">
     <children>
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <Label layoutX="77.0" layoutY="169.0" text="Admin :">
+      <Label layoutX="77.0" layoutY="169.0" text="Admin :" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="68.0" layoutY="222.0" text="Password :">
+      <Label layoutX="68.0" layoutY="222.0" text="Password :" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="188.0" layoutY="97.0" text="Login" underline="true">
+      <Label layoutX="188.0" layoutY="97.0" text="Login" textFill="WHITE" underline="true">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
       </Label>
       <TextField fx:id="adminField" layoutX="160.0" layoutY="169.0" promptText="Enter Admin Name" />
       <PasswordField fx:id="passwordField" layoutX="160.0" layoutY="220.0" promptText="Enter Password" />
-      <Button fx:id="login" layoutX="149.0" layoutY="281.0" mnemonicParsing="false" onAction="#handleLogin" style="-fx-background-color: #E5EEAE;" text="Login" textFill="RED">
+      <Button fx:id="login" layoutX="191.0" layoutY="272.0" mnemonicParsing="false" onAction="#handleLogin" style="-fx-background-color: #A4DDED;" text="Login" textFill="RED">
          <font>
-            <Font name="System Bold Italic" size="12.0" />
-         </font></Button>
-      <Button fx:id="newCarParking" layoutX="253.0" layoutY="281.0" mnemonicParsing="false" onAction="#handleNewCarParking" text="New Car Parking" textFill="RED">
-         <font>
-            <Font name="System Bold Italic" size="12.0" />
+            <Font name="System Bold Italic" size="13.0" />
          </font></Button>
       <FontAwesomeIcon glyphName="CAR" layoutX="194.0" layoutY="73.0" size="5em" />
     </children>
