--- a/Car_Parking_system/src/car_parking_system/Relesed_Parking.fxml
+++ b/Car_Parking_system/src/car_parking_system/Relesed_Parking.fxml
@@ -6,58 +6,40 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="473.0" prefWidth="482.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="car_parking_system.Relesed_ParkingController">
-   <children>
-      <Label layoutX="124.0" layoutY="35.0" text="Released Parking's" textFill="#f80000" underline="true">
-         <font>
-            <Font name="System Bold" size="23.0" />
-         </font>
-      </Label>
-      <TableView fx:id="tableview" layoutX="35.0" layoutY="80.0" prefHeight="377.0" prefWidth="212.0">
-        <columns>
-          <TableColumn fx:id="colt1" prefWidth="75.0" text="Title1" />
-          <TableColumn fx:id="colt2" prefWidth="75.0" text="Title2" />
-            <TableColumn fx:id="colt3" prefWidth="75.0" text="Title3" />
-        </columns>
-      </TableView>
-      <Label layoutX="312.0" layoutY="126.0" text="Payment" underline="true">
-         <font>
-            <Font name="System Bold Italic" size="22.0" />
-         </font>
-      </Label>
-      <Label layoutX="260.0" layoutY="189.0" text="Car No :">
-         <font>
-            <Font name="System Italic" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="264.0" layoutY="231.0" text="Name :">
-         <font>
-            <Font name="System Italic" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="264.0" layoutY="269.0" text="Days :">
-         <font>
-            <Font name="System Italic" size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="263.0" layoutY="311.0" prefHeight="21.0" prefWidth="44.0" text="Paid :">
-         <font>
-            <Font name="System Italic" size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="334.0" layoutY="343.0" text="Note-Rs5$/perdays:">
-         <font>
-            <Font name="System Italic" size="13.0" />
-         </font>
-      </Label>
-      <TextField fx:id="tfcarno" layoutX="315.0" layoutY="187.0" promptText="Enter Car No" />
-      <TextField fx:id="tfname" layoutX="315.0" layoutY="229.0" promptText="Enter Your Name" />
-      <TextField fx:id="tfdays" layoutX="315.0" layoutY="267.0" promptText="Enter Days" />
-      <TextField fx:id="tfpaid" layoutX="315.0" layoutY="309.0" promptText="Enter Amount" />
-      <Button fx:id="btndone" layoutX="293.0" layoutY="393.0" mnemonicParsing="false" onAction="#handledone" text="Done" />
-      <Button fx:id="btnback" layoutX="377.0" layoutY="393.0" mnemonicParsing="false" onAction="#handleback" text="Back" />
-   </children>
+<AnchorPane prefHeight="364.0" prefWidth="603.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="car_parking_system.Relesed_ParkingController">
+    <children>
+        <VBox spacing="10" style="-fx-background-color: #007791;" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
+            <children>
+                <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Released Parking" />
+                <TableView fx:id="tableview" editable="false" prefHeight="200" prefWidth="580">
+                    <columns>
+                        <TableColumn fx:id="colt1" prefWidth="140" text="Car Number" />
+                        <TableColumn fx:id="colt2" prefWidth="140" text="Name" />
+                        <TableColumn fx:id="colt3" prefWidth="140" text="Days" />
+                        <TableColumn fx:id="colt4" prefWidth="160" text="Payment" />
+                    </columns>
+                </TableView>
+                <HBox spacing="10">
+                    <TextField fx:id="tfcarno" promptText="Car Number" />
+                    <TextField fx:id="tfname" promptText="Owner Name" />
+                    <TextField fx:id="tfdays" promptText="Days" />
+                    <TextField fx:id="tfpaid" promptText="Payment" />
+                </HBox>
+                <HBox spacing="10">
+                    <Button fx:id="btndone" onAction="#handledone" text="Done">
+                  <font>
+                     <Font size="13.0" />
+                  </font></Button>
+                    <Button fx:id="btnback" onAction="#handleback" text="Back">
+                  <font>
+                     <Font size="13.0" />
+                  </font></Button>
+                </HBox>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
